created models routes, updated server.js
